<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_title"
        android:inputType="textCapSentences" >
        
        <requestFocus />
    </EditText>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
        
    	    <TextView
	        android:id="@+id/editNote"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/label_note"
	        android:text="@string/lorem_ipsum"
	        android:ems="10" />
	
		    <LinearLayout
		        android:id="@+id/buttons"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center">
		        
			    <Button
			        android:id="@+id/buttonDelete"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center"
			        android:text="@string/label_delete" />
		
			    <Button
			        android:id="@+id/buttonMenu"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center"
			        android:text="@string/label_button_menu" />
			
			    <Button
			        android:id="@+id/buttonSave"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center"
			        android:text="@string/label_save" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>


        
</LinearLayout>
